--- a/22_tienda_cliente_identificacion_usuario/.settings/org.eclipse.wst.common.component
+++ b/22_tienda_cliente_identificacion_usuario/.settings/org.eclipse.wst.common.component
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                        
+                            
     
     
     
     
-    <wb-module deploy-name="proyectoTiendaFinalGIT">
-                                                
+    
+    <wb-module deploy-name="proyectoTiendaFinalLibrosGIT">
+                                                        
+        
         
         
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                
+                                                        
+        
         
         
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                
+                                                        
         
         
         
         
-        <property name="java-output-path" value="/proyectoTiendaFinalGIT/build/classes"/>
-        <property name="context-root" value="proyectoTiendaFinalGIT"/>
-                                            
+        
+        <property name="java-output-path" value="/proyectoTiendaFinalLibrosGIT/build/classes"/>
+        <property name="context-root" value="proyectoTiendaFinalLibrosGIT"/>
+                                                    
+    
     
     
     
     
     </wb-module>
-                    
+                        
+
 
 
 
